# postboy

./: .gitignore  API_DESIGN.md  CHECKLIST.md  Cargo.toml  DELIVERY.md  DESIGN.md  DEVELOPMENT.md  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  ROADMAP.md  SYNC_SERVER_DESIGN.md  check_zed_versions.sh  dev.sh  run.sh  test_collection_integration.sh
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/models/: Cargo.toml
crates/models/src/: collection.rs  environment.rs  lib.rs  request.rs  response.rs  sync.rs  user.rs
crates/service/: Cargo.toml
crates/service/src/: collection.rs  environment.rs  http.rs  lib.rs  request.rs
crates/store/: Cargo.toml
crates/store/migrations/: 001_initial.sql  002_add_sync_support.sql  003_add_history.sql
crates/store/src/: database.rs  db.rs  lib.rs  migrations.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
crates/ui/src/collection/: folder_item.rs  mod.rs  tree_view.rs
crates/ui/src/common/: mod.rs  styles.rs
crates/ui/src/editor/: code_editor.rs  mod.rs  text_editor.rs
crates/ui/src/environment/: manager.rs  mod.rs  variable_editor.rs
crates/ui/src/input/: mod.rs  text_input.rs
crates/ui/src/layout/: header.rs  main_window.rs  mod.rs  sidebar.rs  status_bar.rs
crates/ui/src/modal/: confirm.rs  dialog.rs  mod.rs
crates/ui/src/request/: body_editor.rs  builder.rs  headers_editor.rs  method_select.rs  mod.rs  url_input.rs
crates/ui/src/response/: body_viewer.rs  headers_viewer.rs  mod.rs  status_viewer.rs  viewer.rs
crates/ui/src/theme/: colors.rs  mod.rs  mod.rs.bak  typography.rs
crates/ui/src/utils/: mod.rs  response.rs
