[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Postboy Contributors"]

[workspace.dependencies]
# GPUI and UI - published versions with interaction support
gpui = "0.2.2"
gpui-component = "0.5.1"
postboy-ui = { path = "crates/ui" }
postboy-models = { path = "crates/models" }
postboy-store = { path = "crates/store" }
postboy-service = { path = "crates/service" }

# Application wrapper for gpui-component
anyhow = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "uuid", "chrono", "json"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# DateTime
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "cookies", "multipart"] }

# JavaScript Engine
boa_engine = "0.17"
boa_gc = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Error Handling
thiserror = "1.0"

# Utilities
regex = "1.10"
url = "2.5"
once_cell = "1.19"

# Syntax Highlighting
syntect = "5.1"

# Clipboard
arboard = "3.3"

[profile.dev]
incremental = true

[profile.dev.package]
# Optimize dependencies in dev mode for better performance
gpui = { opt-level = 2 }
boa_engine = { opt-level = 2 }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.release.package]
# Optimize GPUI for maximum performance
gpui = { opt-level = 3 }

# Try using original font-kit without Zed's fork
# This should use core-text 15.0 which is compatible with core-graphics 0.24
