[package]
name = "postboy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
# UI
gpui = { workspace = true }
ui = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID
uuid = { workspace = true }

# DateTime
chrono = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# JavaScript Engine
boa_engine = { workspace = true }
boa_gc = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }

# Clipboard
arboard = { workspace = true }

# Local crates
store = { path = "../store" }
service = { path = "../service" }
models = { path = "../models" }

[dev-dependencies]
tokio-test = "0.4"
