[package]
name = "postboy-app"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true
description = "A Postman-like API testing tool built with Rust and GPUI"
authors = ["Postboy Contributors"]

[[bin]]
name = "postboy"
path = "src/main.rs"

[package.metadata.bundle]
name = "Postboy"
identifier = "com.postboy.app"
icon = []
version = "0.1.0"
copyright = "Copyright (c) 2024 Postboy Contributors"
category = "Developer Tool"
short_description = "API Testing Tool"
long_description = "A modern API testing tool built with Rust and GPUI"

[dependencies]
# UI
gpui = { workspace = true }
gpui-component = { workspace = true }
postboy-ui = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID
uuid = { workspace = true }

# DateTime
chrono = { workspace = true }

# HTTP Client
reqwest = { workspace = true }

# JavaScript Engine
boa_engine = { workspace = true }
boa_gc = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
regex = { workspace = true }
url = { workspace = true }
once_cell = { workspace = true }

# Clipboard
arboard = { workspace = true }

# Local crates
postboy-store = { workspace = true }
postboy-service = { workspace = true }
postboy-models = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
