[package]
name = "postboy-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }

# Local crates
postboy-models = { workspace = true }
postboy-store = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
