[package]
name = "postboy-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
postboy-models = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }

# UUID
uuid = { workspace = true }

# DateTime
chrono = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Utilities
once_cell = { workspace = true }
